--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Card Generator</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -13,17 +13,30 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="flex-container">
+      <div id="card">
+        <div class="top"></div>
+        <div class="middle"></div>
+        <div class="bottom"></div>
       </div>
+    <button class="mt-2 mx-auto col-lg-12" id="generate">Generate Card</button>
+    <div id="resizing" class="mt-3 mx-auto">
+      <label for="card-width">Width (px):</label>
+      <input type="text" id="card-width" placeholder="..." />
+      <label for="card-height">Height (px):</label>
+      <input type="text" id="card-height" placeholder="..." />
+      <button class="mt-2" id="resize">Resize Card</button>
     </div>
-  </body>
+</div>
+    </div>
+  </div>
+</div>
+</body>
 </html>
+
+
+
+
+
+
+
